feat: integrate Hoardcore with Loxep
